// clang-format off
//go:generate msgp
//msgp:ignore TxnMetaMsg
// clang-format on
syntax = "proto3";

option go_package = "sharedlog-stream/pkg/txn_data";

import "pkg/commtypes/producer_state.proto";

package txn_data;

message TopicPartition {
  string Topic = 1; // @gotags: msg:"topic"
  bytes ParNum = 2; // @gotags: msg:"parnum"
}

message TxnMetaMsg {
  string transactional_id = 1;
  commtypes.ProdId prodId = 2;
  uint32 State = 3;
  repeated TopicPartition TopicPartitions = 4;
}
